# 2023-fall-class-notebooks

./: .gitignore  Class-plan.ipynb  README.md  pyproject.toml
code/giee/: __init__.py  _gradients.py
data/: s2000.5  w2000.5
giee/: __init__.py  _binning.py  _filter.py  _gradients.py  _helix.py  _integrate.py  _lapacian.py  _tconv.py
in-class/: 001-Inversion-OOP.ipynb  002-Derivative.ipynb  003-galilee.ipynb  004-vesuvio.ipynb  005-Miss1d.ipynb  006-Missing-data-2d.ipynb  007-Galilee-reg.ipynb  008-Pre-1d.ipynb  009-Super-dix.ipynb  010-Helix-basics.ipynb  011-Texture.ipynb  012-Seabin.ipynb  Derivative.ipynb  Inversion-OOP.ipynb  Missing-data-2d.ipynb  Vectors.ipynb  galilee.ipynb  miss1d.ipynb
in-class/old/: 1-dMissing.ipynb  Missing.ipynb
operators/: Combining operators.ipynb  Convolution.ipynb  Dot product.ipynb  Smoothing.ipynb
